[tool.poetry]
name = "wpydumps"
version = "0.3.0"
description = "Read Wikipedia dumps"
authors = ["Baptiste Fontaine <b@ptistefontaine.fr>"]
license = "MIT"
homepage = "https://github.com/bfontaine/wpydumps"
include = ["wpydumps/py.typed"]
readme = "README.md"
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
]

[tool.poetry.dependencies]
python = "^3.8"
libarchive = "^0.4.7"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
  "libarchive",
  "libarchive.public",
]
ignore_missing_imports = true
